<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Driver Ride History -->
    <string name="ride_cancelled_by">Cancelled by: %1$s</string>
    <string name="filters">Filters</string>
    <string name="ride_history">Ride history:</string>

    <string name="cd_open_menu">Open menu</string>
    <string name="cd_open_profile">Open profile</string>
    <string name="cd_app_logo">App logo</string>

    <string name="details">Details</string>
    <string name="ride_status_completed">Completed</string>
    <string name="ride_status_cancelled">Cancelled</string>
    <string name="ride_status_no_panic">No panic</string>
    <string name="ride_status_panic">Panic</string>
    <string name="ride_status_scheduled">Scheduled</string>

    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>

    <!-- Driver Ride History Details-->
    <string name="date_hint">dd/mm/yyyy</string>
    <string name="ride_details">Ride Details</string>
    <string name="scheduled">Scheduled</string>
    <string name="route">Route</string>
    <string name="end">End:</string>
    <string name="start">Start:</string>
    <string name="timeline">Timeline</string>
    <string name="payment">Payment</string>
    <string name="total_cost">Total cost:</string>
    <string name="destination">Destination</string>
    <string name="cancelled_by">Cancelled by:</string>
    <string name="safety">Safety</string>
    <string name="cancellation">Cancellation</string>
    <string name="close">Close</string>
    <string name="no">No</string>
    <string name="panic_triggered">Panic triggered:</string>
    <string name="pickup">Pickup</string>
    <string name="time">Timestamp:</string>
    <string name="reason">Reason:</string>
    <string name="passengers">Passengers</string>
    <string name="passengers_dots">Passengers:</string>
    <string name="duration">Duration:</string>
    <string name="app_name">UberPLUS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="reports">Reports</string>
    <string name="rideHistory">Ride History</string>
    <string name="booked_rides">Booked Rides</string>
    <string name="book_a_ride">Book a ride</string>
    <string name="cd_close_drawer">Close drawer</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="uber">Uber</string>
    <string name="plus">PLUS</string>
    <string name="current_status">Current status:</string>
    <string name="active">Active</string>
    <string name="working_hours">Working hours:</string>
    <string name="go_offline">Go offline</string>
    <string name="active_last_24h">Active last 24h:</string>
    <string name="_4h_25min">4h 25min</string>
    <string name="limit">Limit:</string>
    <string name="_4h_25min_8h_00min">4h 25min / 8h 00min</string>
    <string name="current_ride">Current ride:</string>
    <string name="assigned">Assigned</string>
    <string name="bulevar_oslobo_enja_46_ulica_narodnih_heroja_14">Bulevar oslobođenja 46 → Ulica Narodnih heroja 14</string>
    <string name="start_ride">Start ride</string>
    <string name="stop_ride">Stop ride here</string>
    <string name="panic">PANIC</string>
    <string name="name">Name</string>
    <string name="_381">+381...</string>
    <string name="_18_08">18.08.</string>
    <string name="_22_30">22:30</string>
    <string name="_2">2</string>
    <string name="pickup_destination">Pickup → Destination</string>
    <string name="req">Req</string>
    <string name="_current_ride">Current ride</string>
    <string name="started">Started</string>
    <string name="eta_7_min">ETA: 7 min</string>
    <string name="vehicle_skoda_octavia_ns_123_ab">Vehicle: Skoda Octavia • NS-123-AB</string>
    <string name="report_driver_inconsistency">Report driver inconsistency</string>
    <string name="if_the_route_looks_unexpected_or_inadequate_leave_a_short_note">If the route looks unexpected or inadequate, leave a short note.</string>
    <string name="write_a_short_note">Write a short note...</string>
    <string name="_0_300">0/300</string>
    <string name="submit">Submit</string>
    <string name="tracking_and_reporting_are_available_only_during_an_active_ride">Tracking and reporting are available only during an active ride.</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="passenger">Passenger</string>
    <string name="stops_dots">Stops:</string>
    <string name="address">Address</string>
    <string name="favorite_routes">Favorite Routes</string>
    <string name="go_anywhere">Go anywhere</string>
    <string name="pickup_location">Pickup location</string>
    <string name="dropoff_location">Dropoff location</string>
    <string name="standard">Standard</string>
    <string name="luxury">Luxury</string>
    <string name="van">Van</string>
    <string name="estimate_price">Estimate price</string>
    <string name="price_range">€10 - €13</string>
    <string name="pickup_time">7 min pickup</string>
    <string name="eta">ETA 12:54</string>
    <string name="distance">3.1 km</string>
    <string name="back_to_map">Back to Map</string>
    <string name="search_pickup_location">Search pickup location</string>
    <string name="search_dropoff_location">Search dropoff location</string>
    <string name="register_a_driver">Register a driver</string>
    <string name="review_profile_changes">Review profile changes</string>
    <string name="panic_notifications">PANIC notifications</string>
    <string name="passenger_reports">Passenger Reports</string>
    <string name="ride_tracking">Ride tracking</string>
    <string name="search_drivers">Search Drivers</string>
    <string name="search_driver">Search Driver</string>
    <string name="search_by_driver_name_or_email">Search by driver name or email...</string>
    <string name="clear">Clear</string>
    <string name="found_0_driver_s">Found 0 driver(s)</string>
    <string name="monitoring_driver_name">Monitoring: Driver Name</string>
    <string name="Pricing" />
    <string name="pricing">Pricing</string>
    <string name="total_base_price_distance_price_per_km">Total = Base Price + (Distance × Price per km)</string>
    <string name="how_pricing_works">How pricing works</string>
    <string name="configure_base_prices_and_per_kilometer_rates">Configure base prices and per-kilometer rates</string>
    <string name="pricing_management">Pricing Management</string>
    <string name="edit_pricing">Edit Pricing</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="price_per_km">Price per Km (€)</string>
    <string name="base_price">Base Price (€):</string>
    <string name="last_updated">Last updated:</string>
    <string name="example_10_km_ride">Example: 10 km ride</string>
    <string name="per_kilometer">Per Kilometer:</string>
    <string name="block_users">Block users</string>
</resources>