<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/img_dashboard_white"/>
        <item
            android:id="@+id/nav_book_ride"
            android:title="@string/book_a_ride"
            android:icon="@drawable/img_car_white"/>
        <item
            android:id="@+id/nav_current_ride"
            android:title="@string/_current_ride"
            android:icon="@drawable/img_current_ride_white"/>
        <item
            android:id="@+id/nav_booked_rides"
            android:title="@string/booked_rides"
            android:icon="@drawable/img_bookedrides_white"/>
        <item
            android:id="@+id/nav_favorite_routes"
            android:title="@string/favorite_routes"
            android:icon="@drawable/img_routes_white"/>
        <item
            android:id="@+id/nav_ride_history"
            android:title="@string/rideHistory"
            android:icon="@drawable/img_history_white"/>
        <item
            android:id="@+id/nav_reports"
            android:title="@string/reports"
            android:icon="@drawable/img_reports_white"/>
        <item
            android:id="@+id/nav_support"
            android:title="@string/support"
            android:icon="@drawable/img_support_white"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/img_user_white"/>
        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/sign_out"
            android:icon="@drawable/img_signout_white"/>

    </group>
</menu>