<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/dark_grey"
    android:layout_height="56dp">

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cd_open_menu"
        android:src="@drawable/ic_hamburger"
        tools:ignore="ImageContrastCheck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="41dp"
            android:layout_height="39dp"
            android:contentDescription="@string/cd_app_logo"
            android:src="@drawable/img_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.450"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/brand_uber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:layout_marginEnd="-4dp"
            android:text="@string/uber"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/brand_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_black"
            android:includeFontPadding="false"
            android:text="@string/plus"
            android:textColor="@color/app_accent"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_profile"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cd_open_profile"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_defaultprofile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>